# oracle

./: .env.example  .gitignore  Cargo.toml  DESIGN_PLAN.md  Dockerfile  README.md  config.example.json  config.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
migrations/: 001_nuw_schema.sql
src/: config.rs  lib.rs  main.rs
src/api/: http.rs  middleware.rs  miner.rs  mod.rs  nuw.rs  oracle.rs  protocol.rs  reputation.rs  web.rs
src/crypto/: merkle.rs  mod.rs  security.rs  signing.rs
src/database/: miners.rs  mod.rs  pool.rs  reputation.rs  rewards.rs  tasks.rs
src/pouw/: aggregator.rs  challenge.rs  demand.rs  mod.rs  oracle.rs  task_selection.rs
src/pouw/boinc/: apis.rs  client.rs  compat.rs  mod.rs  project.rs  proxy.rs  result_tracker.rs
src/pouw/boinc/xml/: mod.rs  obfuscation.rs  processor.rs  security.rs
src/pouw/models/: mod.rs  proof.rs  work.rs
src/pouw/nuw/: distributor.rs  mod.rs  obfuscation.rs  oracle.rs  priority_queue.rs
src/protocol/: README.md  client.rs  epoch.rs  mod.rs  proof.rs  types.rs
src/reputation/: manager.rs  mod.rs  score.rs  slash.rs
src/tigerbeetle/: accounts.rs  client.rs  mod.rs  transfers.rs
tests/: Dockerfile  README.md  conftest.py  docker-compose.yml  init-db.sql  integration_tests.rs  requirements.txt  run-tests.sh
tests/e2e/: test_antigaming.py  test_basic.py  test_standalone.py
tests/lib/: __init__.py  client.py  cluster.py  tigerbeetle.py  utils.py
