[workspace]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/oracle"

[workspace.dependencies]
# Internal - Git dependencies
silica-models = { git = "https://github.com/Silica-Protocol/protocol-core", branch = "main" }

# Core async
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
warp = { version = "0.4.2", features = ["server"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["normalize-path", "trace", "cors"] }
tower-layer = "0.3"
hyper = { version = "1.7", features = ["full"] }

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "pkcs8"] }
rand = { version = "0.8.4", features = ["getrandom"] }

# XML
quick-xml = { version = "0.38", features = ["serialize"] }
serde-xml-rs = "0.8"

# Environment
dotenv = "0.15"

# Concurrency
crossbeam = "0.8"
dashmap = "6.1"

# Memory
bytes = "1.7"
zerocopy = "0.8"

[package]
name = "silica-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Oracle service for Silica Protocol - BOINC/Folding@Home integration"

[dependencies]
# Zero-copy and lock-free optimizations
zerocopy = { workspace = true }
bytes = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }

# Core dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
md5 = "0.7"

# Shared models
silica-models = { workspace = true }

# XML parsing for BOINC APIs
quick-xml = { workspace = true }
serde-xml-rs = { workspace = true }

# Environment variable support
dotenv = { workspace = true }

# URL encoding for security
urlencoding = "2.1"
url = "2.4"
webpki-roots = "0.25"
hex = "0.4"

# HTTP server for job listener
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-layer = { workspace = true }
warp = { workspace = true }

# Required for HTTP server
hyper = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
