[workspace]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Silica-Protocol/oracle"

[workspace.dependencies]
# ============================================================================
# INTERNAL DEPENDENCIES
# ============================================================================
silica-models = { git = "https://github.com/Silica-Protocol/protocol-core", branch = "main" }

# ============================================================================
# ASYNC RUNTIME
# ============================================================================
tokio = { version = "=1.45.1", features = ["full"] }

# ============================================================================
# SERIALIZATION - Locked for ABI stability
# ============================================================================
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"

# ============================================================================
# ERROR HANDLING
# ============================================================================
anyhow = "1.0"

# ============================================================================
# DATABASE
# ============================================================================
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

# ============================================================================
# TIME
# ============================================================================
chrono = { version = "=0.4.42", default-features = false, features = ["serde", "std", "clock"] }

# ============================================================================
# LOGGING
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================================================
# NETWORKING
# ============================================================================
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# ============================================================================
# CRYPTOGRAPHY - MISSION CRITICAL - LOCKED
# ============================================================================
sha2 = "=0.10.9"
ed25519-dalek = { version = "=2.2.0", features = ["serde", "pkcs8", "rand_core"] }
rand = { version = "=0.8.5", features = ["getrandom"] }

# ============================================================================
# XML
# ============================================================================
quick-xml = { version = "0.38", features = ["serialize"] }

# ============================================================================
# CONCURRENCY
# ============================================================================
dashmap = "6.1"

# ============================================================================
# PROFILES
# ============================================================================
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# ============================================================================
# PACKAGE
# ============================================================================
[package]
name = "silica-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Oracle service for Silica Protocol - BOINC/Folding@Home integration"

[dependencies]
# Core
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
md5 = "0.7"

# Shared models
silica-models = { workspace = true }

# XML parsing for BOINC APIs
quick-xml = { workspace = true }

# URL encoding
urlencoding = "2.1"
url = "2.4"
hex = "0.4"

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# Concurrency
dashmap = { workspace = true }
rand = { workspace = true }

# TigerBeetle - Financial database
tigerbeetle-unofficial = "0.14"
sqlx = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
futures = "0.3"
